Version 2.02.94 - 
====================================
  Add _rimage as reserved suffix to lvm.8 man page.
  Improve error logging from mpath filter.
  Check for allocation failure in hold_lock() in clvmd.
  Use set_lv() (wipe initial 4KiB) for non zeroed thin volume.
  Allow cluster mirrors to handle the absence of the checkpoint lib (libSaCkpt).
  Revert free of allocated segtype in init segment error path (2.02.89).
  Test dm_hash_insert() failures in filter-persistent.c and fid_add_mda().
  Ensure clvmd message is always \0 terminated after read.
  Better detection of missing dmeventd fifo connection (2.02.93).
  Add some close() and dev_close() error path backtraces.
  For polling daemon reopen stdin,stdout,stderr to /dev/null.
  Limit the max size of processed clvmd message to ~8KB.
  Do not send uninitilised bytes in cluster error reply messages.
  Use unsigned type for bitmask instead of enum type for lvm properties.
  Add missing cleanup of excl_uuid hash on some exit paths of clvmd.
  Check for existance of vg_name in _format1/_pool_vg_read().
  Fix missing break in _format_pvsegs (2.02.92).
  Test seg pointer for non-null it in raid_target_percent error path.
  Check for errors in _init_tags() during config loading.
  Always check result of _set_vg_name() in lvcreate.
  Drop unused call to uname() during clvmd initialization.
  Test allocation result in sysfs filter creation.
  Limit sscanf parameters with buffer size in clvmd get_initial_state().
  Use const lv pointer for lv_is_active...() functions. 
  Use same signed numbers in _mirrored_transient_status().
  Integrate client-side lvmetad into build.

Version 2.02.93 - 23rd February 2012
====================================
  Require number of stripes to be greater than parity devices in higher RAID.
  Fix allocation code to allow replacement of single RAID 4/5/6 device.
  Check all tags and LV names are in a valid form in vg_validate.